Added all the Controllers.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-36GD6ROB;Database=ProjectGladiator;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
