--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ngToASPContext": "Server=(localdb)\\mssqllocaldb;Database=ngToASPContext-1bd9d5d0-f76d-4cb7-9bc6-b2b109942ae5;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
