Inserted values in tables.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ngToASPContext": "Server=(localdb)\\mssqllocaldb;Database=ngToASPContext-1bd9d5d0-f76d-4cb7-9bc6-b2b109942ae5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-36GD6ROB;Database=ProjectGladiator;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
