Sending EMail from API.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,13 @@
     }
   },
   "AllowedHosts": "*",
+  "MailSettings": {
+    "Mail": "preetiii260100@gmail.com",
+    "DisplayName": "Admin",
+    "Password": "newlife@2601",
+    "Host": "smtp.gmail.com",
+    "Port":  "587"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=ProjectGladiator;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
