Sending OTP from email.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,11 +8,11 @@
   },
   "AllowedHosts": "*",
   "MailSettings": {
-    "Mail": "preetiii260100@gmail.com",
+    "Mail": "eminent.verify@gmail.com",
     "DisplayName": "Admin",
-    "Password": "newlife@2601",
+    "Password": "eminentpg",
     "Host": "smtp.gmail.com",
-    "Port":  "587"
+    "Port": "587"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=ProjectGladiator;Trusted_Connection=True;MultipleActiveResultSets=true"
